--- a/client/public/style.css
+++ b/client/public/style.css
@@ -48,7 +48,7 @@ a {
 }
 
 #app-root {
-  background-color: #FFF4E8;
+  text-align: center;
   color: #645151;
   font-family: "IBM Plex Mono", monospace;
 }
