--- a/client/public/style.css
+++ b/client/public/style.css
@@ -9,6 +9,7 @@
 
 html, body {
   font-size: 16px;
+  color: white;
   line-height: 1.5;
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -16,7 +17,6 @@ html, body {
   -ms-text-size-adjust: 100%;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  background-color: #FFF4E8;
 }
 
 img {
@@ -47,9 +47,15 @@ a {
   margin: 0 auto;
 }
 
+body{
+	background-image: url("./mistika-volshebstvo-ogonki.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+
 #app-root {
   text-align: center;
-  color: #645151;
   font-family: "IBM Plex Mono", monospace;
 }
 
@@ -80,7 +86,7 @@ position: absolute;
 
 .left-card {
   width: 40%;
-  background-color: #FF6B00;
+  background-color: #6D1FB6;
   color: #fff;
   padding: 3.5rem 1.5rem;
   font-family: "Inknut Antiqua", serif;
@@ -108,18 +114,18 @@ position: absolute;
 
 .right-card {
   width: 60%;
-  background-color: #FFE3AE;
+  background-color: #904DCE;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 3.5rem 0.6rem;
+  color: #333;
 }
 
 .right-card__title {
 	font-family: "Inknut Antiqua", serif;
 	text-align: center;
-	color: #FF6B00;
   font-size: 2rem;
   font-weight: 900;
   margin-bottom: 2rem;
@@ -151,7 +157,7 @@ position: absolute;
 }
 
 #start-btn:hover {
-	background-color: #FFAE74;
+	background-color: #FF66CC;
 	transform: scale(1.05); 
 	color: #fff;
  }
@@ -186,7 +192,7 @@ position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-color: #FFF4E8;
+	background: linear-gradient(45deg, #904DCE, #4B0082, #8A2BE2);
 	padding: 1rem;
 	border-radius: 0.3125em;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -233,7 +239,7 @@ right: 1rem;
 
  #submit-btn{
 	text-align: center;
-	background-color: #FFAE74;
+	background-color: #FF66CC;
 	margin: 0 auto;
 	padding: 1rem 8rem;
 	border-radius: 2rem;
