--- a/client/public/style.css
+++ b/client/public/style.css
@@ -47,21 +47,17 @@ a {
   margin: 0 auto;
 }
 
-body{
-	background-image: url("./mistika-volshebstvo-ogonki.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
 
 #app-root {
-  text-align: center;
   font-family: "IBM Plex Mono", monospace;
 }
 
 .welcome {
   position: relative;
   min-height: 100lvh;
+  background-image: url("./tarot.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .welcome__header {
@@ -86,7 +82,7 @@ position: absolute;
 
 .left-card {
   width: 40%;
-  background-color: #6D1FB6;
+  background-color: #0980B4;
   color: #fff;
   padding: 3.5rem 1.5rem;
   font-family: "Inknut Antiqua", serif;
@@ -114,7 +110,7 @@ position: absolute;
 
 .right-card {
   width: 60%;
-  background-color: #904DCE;
+  background-color: #2AAFEA;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -157,7 +153,7 @@ position: absolute;
 }
 
 #start-btn:hover {
-	background-color: #FF66CC;
+	background-color: #046D91;
 	transform: scale(1.05); 
 	color: #fff;
  }
@@ -234,7 +230,9 @@ right: 1rem;
  } 
 
 
-
+ #error-message{
+	margin-bottom: 1rem;
+ }
 
 
  #submit-btn{
@@ -257,4 +255,9 @@ right: 1rem;
 
  #submit-btn:active {
 	transform: scale(0.98);
+ }
+
+
+ .fortune{
+	
  }
