--- a/client/public/style.css
+++ b/client/public/style.css
@@ -335,22 +335,22 @@ transition: transform 0.2s ease, background-color 0.2s ease;
 #card-wrapper{
 	display: flex;
 	justify-content: center;
-
+	gap: 3rem;
+	padding-bottom: 1rem;
 }
 
 .taro-card {
-	max-width: 15em;
+	max-width: 14em;
 	background-color: #000;
 	border-radius: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 1.5rem;
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
 	color: #fff;
 	text-align: center;
-	gap: 1rem;
 	cursor: pointer;
+	gap: 1rem;
  }
 
  .card-visual img {
