--- a/client/public/style.css
+++ b/client/public/style.css
@@ -268,9 +268,8 @@ right: 1rem;
  }
 
  .greeting{
-	font-size: 2rem;
-
-	margin-bottom: 2rem;
+	font-size: 1.7rem;
+	margin-bottom: 3rem;
 	font-weight: bold;
  }
 
@@ -279,8 +278,8 @@ right: 1rem;
  }
 
 .question{
-	font-size: 1.2rem;
-	margin-bottom: 1.2em;
+	font-size: 1.183rem;
+	margin-bottom: 2rem;
 }
 
 .choice-title{
@@ -295,7 +294,8 @@ margin-bottom: 1.5rem;
 }
 
 .choices button{
-padding: 0.5rem 0.7rem;
+width: 100%;
+padding: 0.5rem 0.6rem;
 border-radius: 1.5rem;
 transition: transform 0.2s ease, background-color 0.2s ease;
 }
@@ -326,18 +326,16 @@ transition: transform 0.2s ease, background-color 0.2s ease;
 	justify-content: center;
 	flex-wrap: wrap;
 	gap: 2rem;
-	width: 100%;
 	padding-bottom: 2rem;
 }
 
 .taro-card {
-	width: calc(22% - 2rem);
+	width: 15.5rem;
 	background-color: #000;
 	border-radius: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
 	color: #fff;
 	cursor: pointer;
 	overflow: hidden;
@@ -368,10 +366,9 @@ transition: transform 0.2s ease, background-color 0.2s ease;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 1rem;
+	padding: 0.6rem;
 	text-align: center;
 	opacity: 0;
-	pointer-events: none;
 	transition: opacity 0.3s ease;
 	border-radius: 1rem;
 }
@@ -444,13 +441,78 @@ transition: transform 0.2s ease, background-color 0.2s ease;
 
 
  #search-form{
+width: 100%;
 display: inline-flex;
 justify-content: space-between;
 padding-left: 1rem;
 align-items: center;
  }
 
+ #search-btn{
+	width: auto;
+ }
+
  #search-input{
 outline: none;
 font-size: 1rem;
  }
+
+ 
+/* Media queries */
+
+@media (max-width:920px){
+	.choices{
+		flex-direction: column;
+		gap: 1rem;
+		align-items: center;
+	}
+	.choices li{
+		margin-right: 0;
+	}
+}
+
+ @media (max-width: 805px) {
+	.left-card__title {
+	  font-size: 1.3rem;
+	}
+	.taro-card {
+		width: 14rem;
+	}
+ }
+
+ @media (max-width: 564px){
+	.welcome-card{
+		flex-direction: column-reverse;
+	 }
+	 .left-card {
+		width: 100%;
+		padding: 1.5rem 1.5rem;
+	 }
+	 .left-card__header {
+		margin-bottom: 2rem;
+  }
+  .right-card{
+	width: 100%;
+	padding: 1.5rem 0.6rem;
+  }
+  .right-card__title {
+	margin-bottom: 1rem;
+  }
+	.greeting{
+	font-size:1.52rem;
+}
+
+.choices button{
+	padding: 0.3rem 0.5rem;
+	}
+
+#popup h2 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+#submit-btn {
+	padding: 1rem 7rem;
+	}
+ }
+
