--- a/client/public/style.css
+++ b/client/public/style.css
@@ -7,7 +7,8 @@
   border: 0;
 }
 
-html, body {
+html,
+body {
   font-size: 16px;
   color: white;
   line-height: 1.5;
@@ -18,15 +19,14 @@ html, body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   min-height: 100%;
-  overflow-y: scroll; 
-  -webkit-overflow-scrolling: touch; 
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
-
- body::-webkit-scrollbar {
-	width: 0px;
-	background: transparent;
- }
+body::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
 
 img {
   max-width: 100%;
@@ -41,7 +41,8 @@ button {
   font: inherit;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -55,7 +56,6 @@ a {
   padding: 0 10px;
   margin: 0 auto;
 }
-
 
 #app-root {
   font-family: "IBM Plex Mono", monospace;
@@ -73,16 +73,16 @@ a {
   text-align: start;
 }
 
-.welcome__section{
-width: 100%;
-position: absolute;
+.welcome__section {
+  width: 100%;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 .welcome-card {
-	width: 100%;
+  width: 100%;
   display: flex;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   border-radius: 1.5rem;
@@ -119,7 +119,7 @@ position: absolute;
 
 .right-card {
   width: 60%;
-  background-color: #F5EAD2;
+  background-color: #f5ead2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,14 +129,12 @@ position: absolute;
 }
 
 .right-card__title {
-	font-family: "Inknut Antiqua", serif;
-	text-align: center;
+  font-family: "Inknut Antiqua", serif;
+  text-align: center;
   font-size: 2rem;
   font-weight: 900;
   margin-bottom: 2rem;
 }
-
-
 
 .right-card__desc {
   font-size: 1rem;
@@ -145,374 +143,368 @@ position: absolute;
   color: #333;
 }
 
-
-.left-card__header{
-	margin-bottom: 5rem;
+.left-card__header {
+  margin-bottom: 5rem;
 }
 
-#start-btn{
-	background: #fff;
-	padding: 0.875rem 1.25rem;
-	width: 100%;
-	border-radius: 2rem;
-	font-weight: bold;
-	color: #645151;
-	transition: transform 0.2s ease, background-color 0.2s ease;
-	font-weight: bold;
+#start-btn {
+  background: #fff;
+  padding: 0.875rem 1.25rem;
+  width: 100%;
+  border-radius: 2rem;
+  font-weight: bold;
+  color: #645151;
+  transition:
+    transform 0.2s ease,
+    background-color 0.2s ease;
+  font-weight: bold;
 }
 
 #start-btn:hover {
-	background-color: #F5EAD2;
-	transform: scale(1.05); 
- }
-
- #start-btn:active {
-	transform: scale(0.98);
- }
-
- #popup-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
- }
-  
- #popup {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background: linear-gradient(45deg, #904DCE, #4B0082, #8A2BE2);
-	padding: 1rem;
-	border-radius: 0.3125em;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
- }
-
- #close-modal{
-font-size: 2rem;
-cursor: pointer;
-position: absolute;
-top: 0;  
-right: 1rem;
- }
-
-
- 
- #close-modal:hover{
-	color: #FF3700;
-	 }
-
- #popup h2{
-	margin-top: 3rem; 
-	margin-bottom: 3rem;
- }
-
- #modal-form{
-	display: flex;
-	flex-direction: column;
- }
-
- label{
-	margin-bottom: 0.8rem;
-	font-weight: bold;
- }
-
- #modal-form input{
-	border: 1px solid black;
-	padding: 0.3rem;
-	margin-bottom: 1rem;
- } 
-
-
- #error-message{
-	margin-bottom: 1rem;
- }
-
-
- #submit-btn{
-	text-align: center;
-	background-color: #fff;
-	margin: 0 auto;
-	padding: 1rem 8rem;
-	border-radius: 2rem;
-	font-weight: bold;
-	color: #645151;
-	transition: transform 0.2s ease, background-color 0.2s ease;
-	font-weight: bold;
+  background-color: #f5ead2;
+  transform: scale(1.05);
 }
 
-#submit-btn:hover {
-	background-color: #F5EAD2;
-	transform: scale(1.05); 
- }
-
- #submit-btn:active {
-	transform: scale(0.98);
- }
-
-
- .fortune{
-	min-height: 100vh;
-	background-image: url("./Backgrounds_Wood_texture_082211_.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	overflow: hidden;
- }
-
-
- .tarot-intro{
-	text-align: center;
-	padding: 1rem 0;
- }
-
- .greeting{
-	font-size: 1.7rem;
-	margin-bottom: 3rem;
-	font-weight: bold;
- }
-
- .user-name{
-	color: #F2E1C3;
- }
-
-.question{
-	font-size: 1.183rem;
-	margin-bottom: 2rem;
+#start-btn:active {
+  transform: scale(0.98);
 }
 
-.choice-title{
-	font-weight: bold;
-	margin-bottom: 2rem;
+#popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.choices{
-display: flex;
-justify-content: center;
-margin-bottom: 1.5rem;
+#popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(45deg, #904dce, #4b0082, #8a2be2);
+  padding: 1rem;
+  border-radius: 0.3125em;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.choices button{
-width: 100%;
-padding: 0.5rem 0.6rem;
-border-radius: 1.5rem;
-transition: transform 0.2s ease, background-color 0.2s ease;
+#close-modal {
+  font-size: 2rem;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 1rem;
 }
 
-.choices button:hover{
-	background-color: #F5EAD2;
-	transform: scale(1.05); 
-	border-radius: 1.5rem;
-	}
-
-	.choices button:active {
-		transform: scale(0.98);
-	 }
-
-
-.choices li{
-	background-color: white;
-	border-radius: 1.5rem;
-	margin-right: 1rem;
+#close-modal:hover {
+  color: #ff3700;
 }
-.choices li:last-child{
-	margin-right: 0;
-}
-
-
-#card-wrapper{
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	gap: 2rem;
-	padding-bottom: 2rem;
-}
-
-.taro-card {
-	width: 15.5rem;
-	background-color: #000;
-	border-radius: 1rem;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	color: #fff;
-	cursor: pointer;
-	overflow: hidden;
-	position: relative;
-}
-
-
-.card-visual {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-.card-visual img {
-	width: 100%;
-	height: auto;
-	display: block;
-	border-radius: 1rem;
-	object-fit: cover;
-}
-
-.card-info {
-	position: absolute;
-	inset: 0;
-	background: rgba(0, 0, 0, 0.8);
-	color: #fff;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 0.6rem;
-	text-align: center;
-	opacity: 0;
-	transition: opacity 0.3s ease;
-	border-radius: 1rem;
-}
-
-.card-info h3{
-	font-size: 0.9rem;
-}
-
-.card-info.visible {
-	opacity: 1;
-	pointer-events: all;
-}
-
-.card-meaning {
-	font-size: 0.8rem;
-}
-
- #loader {
-	border: 0.375rem solid #f3f3f3; 
-	border-top: 0.375rem solid #A560E6; 
-	border-radius: 50%;
-	width: 2.5rem; 
-	height: 2.5rem; 
-	animation: spin 1s linear infinite;
-	margin: 1.25rem auto; 
-	display: none;
- }
- 
- @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
- }
- 
- 
-
-
- #error-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.6);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	z-index: 1000;
- }
- 
- #error-popup {
-	background: linear-gradient(45deg, #904DCE, #4B0082, #8A2BE2);
-	color: white;
-	padding: 1.5rem;
-	border-radius: 10px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-	text-align: center;
-	max-width: 300px;
- }
- 
- #error-popup button {
-	margin-top: 1rem;
-	background-color: white;
-	color: #4B0082;
-	padding: 0.5rem 1rem;
-	border: none;
-	border-radius: 6px;
-	cursor: pointer;
-	font-weight: bold;
- }
-
-
- #search-form{
-width: 100%;
-display: inline-flex;
-justify-content: space-between;
-padding-left: 1rem;
-align-items: center;
- }
-
- #search-btn{
-	width: auto;
- }
-
- #search-input{
-outline: none;
-font-size: 1rem;
- }
-
- 
-/* Media queries */
-
-@media (max-width:920px){
-	.choices{
-		flex-direction: column;
-		gap: 1rem;
-		align-items: center;
-	}
-	.choices li{
-		margin-right: 0;
-	}
-}
-
- @media (max-width: 805px) {
-	.left-card__title {
-	  font-size: 1.3rem;
-	}
-	.taro-card {
-		width: 14rem;
-	}
- }
-
- @media (max-width: 564px){
-	.welcome-card{
-		flex-direction: column-reverse;
-	 }
-	 .left-card {
-		width: 100%;
-		padding: 1.5rem 1.5rem;
-	 }
-	 .left-card__header {
-		margin-bottom: 2rem;
-  }
-  .right-card{
-	width: 100%;
-	padding: 1.5rem 0.6rem;
-  }
-  .right-card__title {
-	margin-bottom: 1rem;
-  }
-	.greeting{
-	font-size:1.52rem;
-}
-
-.choices button{
-	padding: 0.3rem 0.5rem;
-	}
 
 #popup h2 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+#modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-bottom: 0.8rem;
+  font-weight: bold;
+}
+
+#modal-form input {
+  border: 1px solid black;
+  padding: 0.3rem;
+  margin-bottom: 1rem;
+}
+
+#error-message {
+  margin-bottom: 1rem;
 }
 
 #submit-btn {
-	padding: 1rem 7rem;
-	}
- }
+  text-align: center;
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 1rem 8rem;
+  border-radius: 2rem;
+  font-weight: bold;
+  color: #645151;
+  transition:
+    transform 0.2s ease,
+    background-color 0.2s ease;
+  font-weight: bold;
+}
 
+#submit-btn:hover {
+  background-color: #f5ead2;
+  transform: scale(1.05);
+}
+
+#submit-btn:active {
+  transform: scale(0.98);
+}
+
+.fortune {
+  min-height: 100vh;
+  background-image: url("./Backgrounds_Wood_texture_082211_.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
+.tarot-intro {
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.greeting {
+  font-size: 1.7rem;
+  margin-bottom: 3rem;
+  font-weight: bold;
+}
+
+.user-name {
+  color: #f2e1c3;
+}
+
+.question {
+  font-size: 1.183rem;
+  margin-bottom: 2rem;
+}
+
+.choice-title {
+  font-weight: bold;
+  margin-bottom: 2rem;
+}
+
+.choices {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.choices button {
+  width: 100%;
+  padding: 0.5rem 0.6rem;
+  border-radius: 1.5rem;
+  transition:
+    transform 0.2s ease,
+    background-color 0.2s ease;
+}
+
+.choices button:hover {
+  background-color: #f5ead2;
+  transform: scale(1.05);
+  border-radius: 1.5rem;
+}
+
+.choices button:active {
+  transform: scale(0.98);
+}
+
+.choices li {
+  background-color: white;
+  border-radius: 1.5rem;
+  margin-right: 1rem;
+}
+.choices li:last-child {
+  margin-right: 0;
+}
+
+#card-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+
+.taro-card {
+  width: 15.5rem;
+  background-color: #000;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+}
+
+.card-visual {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.card-visual img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 1rem;
+  object-fit: cover;
+}
+
+.card-info {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0.6rem;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 1rem;
+}
+
+.card-info h3 {
+  font-size: 0.9rem;
+}
+
+.card-info.visible {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.card-meaning {
+  font-size: 0.8rem;
+}
+
+#loader {
+  border: 0.375rem solid #f3f3f3;
+  border-top: 0.375rem solid #a560e6;
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  animation: spin 1s linear infinite;
+  margin: 1.25rem auto;
+  display: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#error-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+#error-popup {
+  background: linear-gradient(45deg, #904dce, #4b0082, #8a2be2);
+  color: white;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  max-width: 300px;
+}
+
+#error-popup button {
+  margin-top: 1rem;
+  background-color: white;
+  color: #4b0082;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+#search-form {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+  padding-left: 1rem;
+  align-items: center;
+}
+
+#search-btn {
+  width: auto;
+}
+
+#search-input {
+  outline: none;
+  font-size: 1rem;
+}
+
+/* Media queries */
+
+@media (max-width: 920px) {
+  .choices {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+  .choices li {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 805px) {
+  .left-card__title {
+    font-size: 1.3rem;
+  }
+  .taro-card {
+    width: 14rem;
+  }
+}
+
+@media (max-width: 564px) {
+  .welcome-card {
+    flex-direction: column-reverse;
+  }
+  .left-card {
+    width: 100%;
+    padding: 1.5rem 1.5rem;
+  }
+  .left-card__header {
+    margin-bottom: 2rem;
+  }
+  .right-card {
+    width: 100%;
+    padding: 1.5rem 0.6rem;
+  }
+  .right-card__title {
+    margin-bottom: 1rem;
+  }
+  .greeting {
+    font-size: 1.52rem;
+  }
+
+  .choices button {
+    padding: 0.3rem 0.5rem;
+  }
+
+  #popup h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  #submit-btn {
+    padding: 1rem 7rem;
+  }
+}
